tests/rascal/negative/name_errors/L2/7_undecl-in-case3.ob
MODULE Bla;
VAR x, y: INTEGER;

BEGIN
  CASE x OF
   1: 
      z := 1
  END
END Bla.